[gd_scene load_steps=4 format=2]

[ext_resource path="res://Examples/FlappyTest/FlappyTest.gd" type="Script" id=1]
[ext_resource path="res://Examples/fonts/Roboto.tres" type="DynamicFont" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 432, 42.5 )

[node name="FlappyTest" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Obstacles" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="."]

[node name="PlayerPoint" type="Position2D" parent="."]
position = Vector2( 1097, 283 )

[node name="Points" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="Points"]
position = Vector2( 1097, 390 )

[node name="2" type="Position2D" parent="Points"]
position = Vector2( 1097, 184 )

[node name="3" type="Position2D" parent="Points"]
position = Vector2( 1097, 283 )

[node name="4" type="Position2D" parent="Points"]
position = Vector2( 1097, 486 )

[node name="5" type="Position2D" parent="Points"]
position = Vector2( 1097, 88 )

[node name="Area2D" type="Area2D" parent="." groups=["obstacle"]]
position = Vector2( -199, 690 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 422, -32.5 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="." groups=["obstacle"]]
position = Vector2( -215, -14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 422, -32.5 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer/Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )

[node name="Button" type="Button" parent="CanvasLayer/Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -560.0
margin_top = 571.0
margin_right = -420.0
margin_bottom = 591.0
text = "Forced regeneration"

[node name="Visualize" type="Button" parent="CanvasLayer/Interface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -412.0
margin_top = 571.0
margin_right = -272.0
margin_bottom = 591.0
text = "Visualize"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="pressed" from="CanvasLayer/Interface/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Interface/Visualize" to="." method="_on_Visualize_pressed"]
